Entrega Final HTML/CSS

--- a/Info.html
+++ b/Info.html
@@ -17,19 +17,38 @@
       <body>
         <header>
           <h1 class="Titulo animate__animated animate__fadeInUp"><strong>INES MAGMA</strong></h1>
-          <nav class="indicePrincipal">
-            <ul>
-              <li class="animate__animated animate__fadeIn"><a href="index.html">Inicio</a></li>
-              <li class="animate__animated animate__fadeIn"><a href="Info.html">Info</a></li>
-              <li class="animate__animated animate__fadeIn"><a href="Fotos.html">Fotos</a></li>
-              <li class="animate__animated animate__fadeIn"><a href="Videos.html">Videos</a></li>
-              <li class="animate__animated animate__fadeIn"><a href="Insta.html"> Insta</a></li>
-              <li class="animate__animated animate__fadeIn"><a  href="Contacto.html">Contacto</a></li>
-            </ul>
+          <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #ACE894;">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" 
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+                    aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link active" href="index.html">Inicio<span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link active" href="Info.html">Info<span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link active" href="Fotos.html">Fotos</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link active" href="Videos.html">Videos</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link active" href="Insta.html">Insta</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link active" href="Contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
           </nav>
         </header>
         <main class="parrafo">
-          <p>Inés Hernandez es una artista visual originaria de Maracay, Venezuela. Estudió Fotografía en ISEC (Instituto Nueva Generación de Comunicadores)
+          <p class="texto">Inés Hernandez es una artista visual originaria de Maracay, Venezuela. Estudió Fotografía en ISEC (Instituto Nueva Generación de Comunicadores)
              en Buenos Aires, Argentina. Sus trabajos engloban fotografía, videos y trabajos experimentales como filtros de Instagram.
           </p>
           <br>
