--- a/Contacto.html
+++ b/Contacto.html
@@ -15,52 +15,71 @@
         <body>
             <header>
                 <h1 class="Titulo animate__animated animate__fadeInUp"><strong>INES MAGMA</strong></h1>
-                <nav class="indicePrincipal">
-                    <ul>
-                        <li class="animate__animated animate__fadeIn"><a href="index.html">Inicio</a></li>
-                        <li class="animate__animated animate__fadeIn"><a href="Info.html">Info</a></li>
-                        <li class="animate__animated animate__fadeIn"><a href="Fotos.html">Fotos</a></li>
-                        <li class="animate__animated animate__fadeIn"><a href="Videos.html">Videos</a></li>
-                        <li class="animate__animated animate__fadeIn"><a href="Insta.html">Insta</a></li>
-                        <li class="animate__animated animate__fadeIn"><a  href="Contacto.html">Contacto</a></li>
+                <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #ACE894;">
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" 
+                          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+                          aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                      <li class="nav-item active">
+                        <a class="nav-link active" href="index.html">Inicio<span class="sr-only"></span></a>
+                      </li>
+                      <li class="nav-item active">
+                        <a class="nav-link active" href="Info.html">Info<span class="sr-only"></span></a>
+                      </li>
+                      <li class="nav-item active">
+                        <a class="nav-link active" href="Fotos.html">Fotos</a>
+                      </li>
+                      <li class="nav-item active">
+                        <a class="nav-link active" href="Videos.html">Videos</a>
+                      </li>
+                      <li class="nav-item active">
+                        <a class="nav-link active" href="Insta.html">Insta</a>
+                      </li>
+                      <li class="nav-item active">
+                        <a class="nav-link active" href="Contacto.html">Contacto</a>
+                      </li>
                     </ul>
+                  </div>
                 </nav>
             </header>
             <main class="parrafo">
-                <p class="subTitulos">Contacto</p>
+                <p class="texto">Contacto</p>
                 <br>
                 <form>
                     <div class="form-group row">
-                      <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre</label>
+                      <label for="inputEmail3" class="col-sm-2 col-form-label" style="color: #ACE894;">Nombre</label>
                       <div class="col-sm-10">
                         <input type="email" class="form-control" id="inputEmail3" placeholder="Nombre">
                       </div>
                     </div>
                     <div class="form-group row">
-                      <label for="inputPassword3" class="col-sm-2 col-form-label">Email</label>
+                      <label for="inputPassword3" class="col-sm-2 col-form-label" style="color: #ACE894;">Email</label>
                       <div class="col-sm-10">
                         <input type="email" class="form-control" id="inputPassword3" placeholder="Email">
                       </div>
                     </div>
                     <fieldset class="form-group">
                       <div class="row">
-                        <legend class="col-form-label col-sm-2 pt-0">¿Quien Eres?</legend>
+                        <legend class="col-form-label col-sm-2 pt-0" style="color: #ACE894;">¿Quien Eres?</legend>
                         <div class="col-sm-10">
                           <div class="form-check">
                             <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                            <label class="form-check-label" for="gridRadios1">
+                            <label class="form-check-label" style="color: #ACE894;" for="gridRadios1">
                               Un Artista
                             </label>
                           </div>
                           <div class="form-check">
                             <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                            <label class="form-check-label" for="gridRadios2">
+                            <label class="form-check-label" style="color: #ACE894;" for="gridRadios2">
                               Una Empresa
                             </label>
                           </div>
                           <div class="form-check">
                             <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
-                            <label class="form-check-label" for="gridRadios3">
+                            <label class="form-check-label" style="color: #ACE894;" for="gridRadios3">
                               Soy un Freelancer
                             </label>
                           </div>
@@ -69,7 +88,7 @@
                     </fieldset>
                     <br>
                     <br>
-                    <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Razón de Contacto:</label>
+                    <label class="my-1 mr-2" for="inlineFormCustomSelectPref" style="color: #ACE894;">Razón de Contacto:</label>
                     <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
                         <option selected>Seleccione...</option>
                         <option value="1">Fotos</option>
@@ -79,13 +98,13 @@
                     <br>
                     <br>
                     <div>
-                        <p> Comentario:</p>
+                        <p class="texto">Comentario:</p>
                         <br>
                         <br>
                         <textarea rows="20" cols="40">
                         </textarea>
                         <br>
-                        <input type="submit" value="Enviar Comentario"/>
+                        <input type="submit" style="background-color: aquamarine;" value="Enviar Comentario"/>
                         <input type="reset" value="Borrar"/>
                     </div>
                   </form>
