--- a/Videos.html
+++ b/Videos.html
@@ -15,20 +15,40 @@
         <body>
             <header>
                 <h1 class="Titulo animate__animated animate__fadeInUp"><strong>INES MAGMA</strong></h1>
-                    <nav class="indicePrincipal">
-                        <ul>
-                            <li class="animate__animated animate__fadeIn"><a href="index.html">Inicio</a></li>
-                            <li class="animate__animated animate__fadeIn"><a href="Info.html">Info</a></li>
-                            <li class="animate__animated animate__fadeIn"><a href="Fotos.html">Fotos</a></li>
-                            <li class="animate__animated animate__fadeIn"><a href="Videos.html">Videos</a></li>
-                            <li class="animate__animated animate__fadeIn"><a href="Insta.html">Insta</a></li>
-                            <li class="animate__animated animate__fadeIn"><a  href="Contacto.html">Contacto</a></li>
-                        </ul>
-                    </nav>
-                </div>
+                <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #ACE894;">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" 
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+                            aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+                      <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                          <a class="nav-link active" href="index.html">Inicio<span class="sr-only"></span></a>
+                        </li>
+                        <li class="nav-item active">
+                          <a class="nav-link active" href="Info.html">Info<span class="sr-only"></span></a>
+                        </li>
+                        <li class="nav-item active">
+                          <a class="nav-link active" href="Fotos.html">Fotos</a>
+                        </li>
+                        <li class="nav-item active">
+                          <a class="nav-link active" href="Videos.html">Videos</a>
+                        </li>
+                        <li class="nav-item active">
+                          <a class="nav-link active" href="Insta.html">Insta</a>
+                        </li>
+                        <li class="nav-item active">
+                          <a class="nav-link active" href="Contacto.html">Contacto</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </nav>
+                    
+                
             </header>
             <main class="parrafo">
-                <p>Galería de Videos.</p>
+                <p class="texto">Galería de Videos.</p>
                 <br>
                 <br>
                 <div class="grid-container">
